Revert "latest from nitro/master"
This reverts commit e89da71da0a7f494ee6e79a92f3828d8079c1c4d.